--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-image:url("https://images.pexels.com/photos/4551832/pexels-photo-4551832.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+}
+
 body, h1, h2, ul, li, p {
   margin: 0;
   padding: 0;
